[gd_scene load_steps=2 format=3 uid="uid://bv86tuktn4dh1"]

[ext_resource type="Script" uid="uid://bdieepsumujil" path="res://src/ui/game_browser.gd" id="1_browser"]

[node name="GameBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_browser")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "< Back"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Browser"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="PlayerInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/PlayerInfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Player Information"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/PlayerInfoContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/PlayerInfoContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/PlayerInfoContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
placeholder_text = "Enter your name"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoPanel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/InfoPanel"]
layout_mode = 0
offset_left = 198.0
offset_top = 57.0
offset_right = 323.0
offset_bottom = 130.0
text = "Idk, character/class select or something."

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GameListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/GameListContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/GameListContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Available Games"

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/GameListContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Refresh List"

[node name="GameList" type="ItemList" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/GameListContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="ServerConnectContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Direct Connect"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddressLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/HBoxContainer"]
layout_mode = 2
text = "Address:"

[node name="AddressInput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"
placeholder_text = "IP Address"

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/HBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "8080"
placeholder_text = "Port"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Join Game"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/ServerConnectContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Host Game"
